add instructions for point3d

--- a/postgresql-12.8/src/tutorial/Makefile
+++ b/postgresql-12.8/src/tutorial/Makefile
@@ -13,7 +13,7 @@
 #
 #-------------------------------------------------------------------------
 
-MODULES = complex funcs
+MODULES = complex funcs point3d
 DATA_built = advanced.sql basics.sql complex.sql funcs.sql syscat.sql
 
 ifdef NO_PGXS
